--- a/css/main.css
+++ b/css/main.css
@@ -1,31 +1,40 @@
 body {
-  background-image: url(https://images.unsplash.com/photo-1457014013353-1d9b69406a5c?dpr=1&auto=format&fit=crop&w=767&h=511&q=80&cs=tinysrgb&crop=);
+  background-image: url(https://images.unsplash.com/photo-1478185043339-d6c27ccac616?dpr=1&auto=format&fit=crop&w=767&h=509&q=80&cs=tinysrgb&crop=);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
   font-family: Roboto, sans-serif;
   font-size: 30px;
   margin: 0;
-  width: 100%; }
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0; }
 
 a {
   text-decoration: none; }
 
 .container {
-  min-height: 100%;
+  min-height: 100vh;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
   width: 100%;
   background: rgba(0, 0, 0, 0.4);
   display: flex;
   flex-direction: column;
   justify-content: center; }
 
-.box, .description, .find-me {
+.box, .description, .tools, .find-me {
   align-self: center; }
 
 .name {
   color: #fff;
   font-size: 40px;
-  margin-top: 70px;
+  margin-top: 5%;
   text-align: center;
   font-weight: 900;
   letter-spacing: 0; }
@@ -58,16 +67,27 @@ a {
   color: #eee;
   opacity: 0.8;
   font-weight: bold;
-  margin-top: 30px;
+  margin-top: 2%;
   text-align: center;
   font-family: Merriweather, serif; }
 
 .tools {
-  margin-top: 100px; }
+  margin-top: 3%;
+  color: #eee;
+  opacity: 0.8;
+  text-align: center;
+  display: flex;
+  width: 100%; }
+
+.packages, .languages {
+  flex: 1;
+  /*border: 1px solid #fff */
+  min-height: 10vh;
+  width: 50%; }
 
 .find-me {
   font-size: 70px;
-  margin-top: 80px;
+  margin-top: 2%;
   display: flex;
   flex-direction: row;
   height: 70px; }
@@ -76,14 +96,15 @@ a {
   color: #fff;
   transition: all 0.5s; }
   .find-me a:hover {
-    color: black;
+    color: #000;
+    opacity: 0.8;
     font-size: 100px;
     transition: all 0.5s; }
 
 footer {
   font-size: 12px;
   color: #fff;
-  margin-top: 100px;
+  margin-top: 5%;
   margin-right: 10px;
   align-self: flex-end; }
 
