--- a/css/main.css
+++ b/css/main.css
@@ -105,7 +105,6 @@ footer {
   font-size: 12px;
   color: #fff;
   margin-top: 5%;
-  margin-right: 10px;
-  align-self: flex-end; }
+  text-align: center; }
 
 /*# sourceMappingURL=main.css.map */
