--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ body {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  background-repeat: no-repeat;
   font-family: Roboto, sans-serif;
   font-size: 30px;
   margin: 0;
