--- a/css/main.css
+++ b/css/main.css
@@ -112,6 +112,7 @@ footer {
         font-size: 20px;
         padding: 0 8px;
         letter-spacing: 3px;
+        margin-top: 10px;
     }
     .description {
         font-size: 16px;
