--- a/css/main.css
+++ b/css/main.css
@@ -95,13 +95,14 @@ a {
 }
 
 footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
     font-size: 12px;
     color: #fff;
     margin-top: 30px;
     text-align: center;
+}
+
+footer #copyright {
+    margin-top: 130px;
 }
 
 
